--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <input type="" name="" id="category"><button class="btn btn-secondary" id="addTag">Add 
     </button>
     </div>
-    <div id="photo"><</div>
+    <div id="photo"></div>
     <script src="assets/javascript/sample.js"></script>
 
 </body>
